# OR2LaTeX

./: .clang-tidy  .cmake-format.py  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  README.md  VarLogging.cmake  compile_commands.json  tatic stdstringstream OR2LOR2LEXCEPTION_buffer = stdstringstream();q
.devcontainer/: Dockerfile  devcontainer.json  setup_container.sh
.github/workflows/: cmake.yml
cmake/: FindBoost.cmake  FindGurobi.cmake  Findbasetypeslib.cmake  Findboost.cmake  Findgtest.cmake  Findgurobi.cmake  Findortools.cmake
src/: CMakeLists.txt  CmakeLists.txt
src/BaseTypesLib/: ArrayIterator.h  BaseTypesLib.cpp  Bounds.h  CMakeLists.txt  CmakeLists.txt  Coordinates.h  Graph.h  ModuleTester.cpp  ModuleTester.h  OR2L_EXCEPTION.h  RegexString.cpp  RegexString.h  Vecxd.h
src/OR2LaTeX/: CMakeLists.txt
src/OR2LaTeX/OR2L_Types/: Auxiliary.cpp  Auxiliary.h  CMakeLists.txt  COEFFICIENT.h  CONSTANT.h  CONSTRAINT.h  CUSTOM_VALIDATION_RULE.cpp  CUSTOM_VALIDATION_RULE.h  CmakeLists.txt  Constraint.h  CustomValidationRule.h  EXPRESSION.h  EXPRESSION_OPERATORS.h  EXPRESSION_OPERATORS_TYPE.h  Exception.h  Expression.h  ExpressionOperatorTypes.h  INDEX.cpp  INDEX.h  Index.h  MATH_EXPRESSION.h  MODEL.h  MathExpression.h  Model.cpp  Model.h  NUMERIC_LIMITS.h  NumericLimits.h  OR2LEXCEPTION.h  OR2L_Types_tests.cpp  ORParserComponent.cpp  ORParserComponent.h  ObjectWrapper.h  ObjectiveExpression.h  OperatorTypes.h  REGEX_STRING.h  RegexString.h  SUMMATION.h  SYMBOL_COMPONENT.h  SYMBOL_OBJECT.h  SYMBOL_STRING.h  (+25 more)
src/OR2LaTeX/OR2L_Types/solver_objects/: Solver.h
src/OR2LaTeX/auxiliary/: Auxiliary.cpp  Auxiliary.h  Exception.h
src/OR2LaTeX/model/: Model.cpp  Model.h
src/OR2LaTeX/solver/: Solver.h  SolverType.h
src/OR2LaTeX/symbol/: Constraint.h  CustomValidationRule.h  Expression.h  Index.h  InnerExpression.h  MathExpression.h  NewExpression.h  ObjectiveExpression.h  OperatorTypes.h  README.md  SymbolComponent.h  SymbolType.h  Variable.cpp  Variable.h  VariableType.h
tests/: BaseTypesLib_test.cpp  CMakeLists.txt  CmakeLists.txt  OR2L_Types_test.cpp  test-BaseTypesLib.cpp  test-OR2L_Types.cpp  test-gurobi.cpp  test-memory.cpp  test-new-expression-operators.cpp  test-or2lbinding.cpp  test-or2ltypes.cpp  test-ortools.cpp  test.cpp  testBaseTypesLib.cpp  testOR2L_Types.cpp
